fix: subscriptions handlers and docs
